--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "node server/server.js",
+    "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -56,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "react-test-renderer": "^16.13.1",
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^25.2.1",
     "enzyme": "^3.11.0",
