--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "firebase": "^7.14.2",
+    "history": "^4.10.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
